--- a/.github/workflows/plan-on-pr.yml
+++ b/.github/workflows/plan-on-pr.yml
@@ -33,7 +33,7 @@ jobs:
           terraform_version: 1.0.9
 
       - name: Run terraform fmt check
-        run: terraform fmt -check -diff -recursive ./iac**
+        run: terraform fmt -check -diff -recursive iac/**
 
   plan:
     name: Plan
