--- a/.github/workflows/plan-on-pr.yml
+++ b/.github/workflows/plan-on-pr.yml
@@ -3,7 +3,7 @@ name: Plan / Test On PR
 on:
   pull_request:
     branches: 
-    - "dev"     
+    - dev     
     paths:
     - iac/environment/*
 
