--- a/.github/workflows/plan-on-pr.yml
+++ b/.github/workflows/plan-on-pr.yml
@@ -2,10 +2,10 @@ name: Plan / Test On PR
 
 on:
   push:
-    branches: [ local ]
+    branches: [ dev ]
   pull_request:
     branches:
-      - dev 
+      - main
     paths:
     - iac/environment/*
 
