--- a/.github/workflows/plan-on-pr.yml
+++ b/.github/workflows/plan-on-pr.yml
@@ -78,6 +78,7 @@ jobs:
         name: 'gcloud'
         run: |-
           gcloud auth login
+          gcloud config set project lambda-377114
           gcloud secrets versions access "latest" --secret "oidc-authentication"
 
       - name: Initialize Terraform
