--- a/.github/workflows/apply-on-merge.yml
+++ b/.github/workflows/apply-on-merge.yml
@@ -70,7 +70,7 @@ jobs:
         name: 'gcloud'
         run: |-
           gcloud config set project lambda-377114
-          gcloud secrets versions access "latest" --secret "oidc-authentication"
+          gcloud secrets versions access --secret "oidc-authentication"
 
       - name: Initialize Terraform
         run: |
