--- a/.github/workflows/plan-on-pr.yml
+++ b/.github/workflows/plan-on-pr.yml
@@ -77,6 +77,7 @@ jobs:
       - id: 'gcloud'
         name: 'gcloud'
         run: |-
+          gcloud auth login
           gcloud config set project lambda-377114
           gcloud secrets versions access "latest" --secret "oidc-authentication"
 
