--- a/iac/modules/gh_oidc_module/metadata.yaml
+++ b/iac/modules/gh_oidc_module/metadata.yaml
@@ -22,6 +22,7 @@ spec:
   title: ""
   source:
     repo: https://github.com/btdigital/tf-setup
+    branch: main
     sourceType: git
   version: 3.1.0
   actuationTool:
