--- a/.github/workflows/plan-on-pr.yml
+++ b/.github/workflows/plan-on-pr.yml
@@ -27,7 +27,7 @@ jobs:
           terraform_version: 1.0.9
 
       - name: Run terraform fmt check
-        run: terraform fmt iac/environment/*
+        run: terraform fmt  -list=false iac/environment/*
 
   plan:
     name: Plan
