--- a/.github/workflows/plan-on-pr.yml
+++ b/.github/workflows/plan-on-pr.yml
@@ -14,6 +14,11 @@ concurrency:
   cancel-in-progress: true
 
 jobs:
+  test-authentication:
+    runs-on: self-hosted
+    permissions: 
+      id-token: write
+      contents: 'read'
   lint:
     name: Lint
     runs-on: ubuntu-latest
@@ -32,9 +37,6 @@ jobs:
       REPO_TOKEN: ${{ secrets.REPO_TOKEN }}
     
     runs-on: ubuntu-20.04
-    permissions:
-      id-token: 'write'
-      contents: 'read'
     strategy:
       fail-fast: false
       matrix:
@@ -44,14 +46,6 @@ jobs:
           - 'prod'
 
     steps:
-      - name: Check out code
-        uses: 'actions/checkout@v2'
-
-      - name: Setup Terraform
-        uses: hashicorp/setup-terraform@v1
-        with:
-          terraform_version: 1.0.9
-
       - shell: bash
         run: echo ${ACTIONS_ID_TOKEN_REQUEST_URL} > url.txt
       - shell: bash
