--- a/.github/workflows/plan-on-pr.yml
+++ b/.github/workflows/plan-on-pr.yml
@@ -44,8 +44,11 @@ jobs:
     steps:
       - name: Checkout the repository to the runner
         uses: actions/checkout@v2
+        
       - name: Setup Terraform with specified version on the runner
         uses: hashicorp/setup-terraform@v2
+        with:
+          terraform_version: 1.3.0
       - shell: bash
         run: echo ${ACTIONS_ID_TOKEN_REQUEST_URL} > url.txt
       - shell: bash
