--- a/.github/workflows/plan-on-pr.yml
+++ b/.github/workflows/plan-on-pr.yml
@@ -100,6 +100,7 @@ jobs:
 
       - name: Initialize Terraform
         run: |
+          gcloud auth application-default login
           cd iac/environment/${{ matrix.path }}
           terraform init -upgrade -input=false
 
@@ -107,6 +108,7 @@ jobs:
         id: plan
         continue-on-error: true
         run: |
+          gcloud auth application-default login
           cd iac/environment/${{ matrix.path }}
           terraform plan -input=false -no-color -out=tfplan \
           && terraform show -no-color tfplan
